# pawer

./: Cargo.toml  README.md  results.csv
.github/: copilot-instructions.md
.github/workflows/: ci.yml
crates/pawer/: Cargo.toml
crates/pawer-examples/: Cargo.toml
crates/pawer-examples/examples/: grid_connected_current_control.rs  grid_model.rs  srf_pll.rs
crates/pawer-examples/src/: grid_current_controller.rs  grid_model.rs  lib.rs  waveform_gen.rs
crates/pawer-examples/tests/: srf_pll_integration.rs
crates/pawer-sim/: Cargo.toml
crates/pawer-sim/examples/: pi_step_response.rs  srf_pll.rs
crates/pawer-sim/src/: context.rs  engine.rs  export.rs  lib.rs  logger.rs  plotter.rs  scenario.rs  waveform_gen.rs
crates/pawer-sim/src/cli/: commands.rs  mod.rs  parser.rs
crates/pawer-sim/tests/: srf_pll_integration.rs
crates/pawer/src/: angle.rs  boolean_debouncer.rs  constants.rs  derivative.rs  edge_detector.rs  elapsed_timer.rs  first_order_lpf.rs  frames.rs  hysteresis_limiter.rs  integrator.rs  interval_timer.rs  lib.rs  limit.rs  linear_ramp.rs  lookup_table_1d.rs  lookup_table_2d.rs  off_delay.rs  on_delay.rs  on_off_delay.rs  per_unit.rs  pi_controller.rs  precomputed_divisor.rs  rate_of_change_limiter.rs  reciprocal.rs  second_order_filter.rs  srf_pll.rs  types.rs
examples/: filter_example.rs
src/: controllers.rs  filters.rs  integrator.rs  lib.rs
