[package]
name = "pawer-sim"
version = "0.1.0"
edition = "2024"
description = "Software-in-the-loop simulation support library for pawer-based control algorithms"
keywords = ["embedded", "simulation", "power-electronics", "control", "sil"]
categories = ["simulation", "science", "development-tools::testing"]

[dependencies]
pawer = { path = "../pawer" }

[dev-dependencies]
