[package]
name = "pawer-sim"
version = "0.1.0"
edition = "2024"
description = "Software-in-the-loop simulation utilities for evaluating time-dependent performance of discrete-time control algorithms"
keywords = ["simulation", "control", "testing", "power-electronics", "sil"]
categories = ["simulation", "science", "development-tools::testing"]

[dependencies]

[dev-dependencies]
